add market config

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,11 @@
  password = pass
  uri = mongodb://127.0.0.1:27017
 
+[redis]
+host = localhost
+port = 6379
+password = pass
+
 [marketsub]
- symbols = ETCUSDT,BTCUSDT,ZECUSDT,XRPUSDT,WLDUSDT,DASHUSDT
- intervals = 15m,1h,4h,1d
+ symbols = etcusdt,btcusdt,zecusdt,xrpusdt
+ intervals = 1m,5m,15m,1h,4h
