--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,22 @@
 [database]
- host = localhost
- port = 3306
- username = user
- password = pass
- uri = mongodb://127.0.0.1:27017
+ # Only `uri` is required for ChomoSyncer to connect to MongoDB.
+ # Other parameters (host, port, username, password) are placeholders for potential future extensions.
+ host = not_used
+ port = not_used
+ username = not_used
+ password = not_used
+ uri = mongodb://USERNAME:PASSWORD@HOST:PORT/admin
 
 [redis]
- host = localhost
+ # All fields are required.
+ # Make sure the same password is set in your Redis server configuration file.
+ host = 192.168.1.1
  port = 6379
- password = pass
+ password = YOUR_REDIS_PASSWORD
 
 [marketsub]
- symbols = etcusdt,btcusdt,zecusdt,xrpusdt
- intervals = 1m,5m,15m,1h,4h
+ # Symbols and intervals to subscribe.
+ # ChomoSyncer will create a subscription for each combination of symbol × interval.
+ # For example: 3 symbols × 3 intervals = 9 concurrent data streams.
+ symbols = btcusdt,ethusdt,ltcusdt,bnbusdt
+ intervals = 1d,4h,1h
